@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - mgh: When the rpmfc_magic_path is not set or can't be expanded, act as if there is no magic file
     - mgh: add lib32 as a valid directory in rpmfc
     - mgh: change uses of @USRLIBRPM@ to %{_usrlibrpm} (needed for runtime relocation)
     - mgh: ensure the rpm python module is linked the same as the rest of RPM
